kubernetes/22-mysql-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: maradona
spec:
  selector:
    matchLabels:
      app: mysql-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-service
    spec:
      containers:
      - image: mysql:5.7.23
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: mysql-initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      - name: mysql-initdb
        configMap:
          name: mysql-initdb-config
