kubernetes/11-maradona-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: maradona
spec:
  ports:
  - port: 3306
    nodePort: 30306
  selector:
    app: mysql
  type: NodePort
