kubernetes/20-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: mysql-service
    namespace: maradona
spec:
    type: NodePort
    selector:
        app: mysql-service
    ports:
      - name: my-sql
        port: 3306
