kubernetes/30-api-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: api-service
    namespace: maradona
spec:
    type: NodePort
    selector:
        app: api-service
    ports:
      - name: api
        port: 5000
