kubernetes/30-maradona-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: maradona
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 8080
  selector:
    app: app-service
